:sparkles: Improve replication

--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
